src/objects/AppErrorLog__c.object
<CustomObject>
    <fields>
        <fullName>AppVersion__c</fullName>
        <label>AppVersion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceId__c</fullName>
        <label>DeviceId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceOs__c</fullName>
        <label>DeviceOs</label>
        <picklist>
            <picklistValues>
                <fullName>IOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDROID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ErrorDump__c</fullName>
        <label>ErrorDump</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExceptionId__c</fullName>
        <label>ExceptionId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UserId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AppErrorLog</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AppErrorLog</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>AppErrorLogId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AppErrorLog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>